Update to newly-rewritten GTIRB API
The GTIRB Java API was completely rewritten, bringing it more in line
with the GTIRB API for other languages. This change makes the Ghidra
plugin use the new API.